--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,9 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(main "src/Main.cpp" 
 					"src/Game.cpp"
 					"src/Scenes/SceneManager.cpp" 
-					"src/Scenes/MainMenuScene.cpp" "include/Pong/Scenes/PlayScene.hpp" "src/Scenes/PlayScene.cpp" "src/Scenes/CreditsScene.cpp" "include/Pong/Scenes/CreditsScene.hpp")
+					"src/Scenes/MainMenuScene.cpp"
+					"src/Scenes/PlayScene.cpp" 
+					"src/Scenes/CreditsScene.cpp")
 target_include_directories(main PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
 find_package(SFML COMPONENTS graphics audio REQUIRED)
