finalize play scene

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,9 @@ add_executable(main
 					"src/Scenes/SceneManager.cpp"
 					"src/Scenes/MainMenuScene.cpp"
 					"src/Scenes/PlayScene.cpp" 
-					"src/Scenes/CreditsScene.cpp") 
+					"src/Objects/Paddle.cpp" 
+					"src/Objects/Ball.cpp") 
 target_include_directories(main PRIVATE ${CMAKE_SOURCE_DIR}/include)
-
-if(MSVC)
-	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
-endif()
 
 find_package(SFML COMPONENTS main graphics audio REQUIRED)
 target_link_libraries(main PRIVATE sfml-main sfml-graphics sfml-audio)
@@ -25,4 +22,4 @@ find_package(TGUI CONFIG REQUIRED)
 target_link_libraries(main PRIVATE tgui)
 
 message(STATUS ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
-configure_file(${CMAKE_SOURCE_DIR}/resources/bit5x3.ttf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} COPYONLY)
+configure_file(${CMAKE_SOURCE_DIR}/resources/bit9x9.ttf ${CMAKE_BINARY_DIR} COPYONLY)
