--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,13 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(main 
 					"src/Main.cpp"
-					"src/Game.cpp"
-					"src/ResourceManager.cpp"
+					"src/Game.cpp" 
 					"src/ServiceLocator.cpp"
-					"src/Scenes/SceneManager.cpp"
-					"src/Scenes/MainMenuScene.cpp"
-					"src/Scenes/PlayScene.cpp" 
-					"src/Objects/Paddle.cpp" 
-					"src/Objects/Ball.cpp") 
+					"src/Scenes/SceneManager.cpp" 
+					"src/Scenes/MainMenuScene.cpp" 
+					"src/Scenes/TwoPlayerScene.cpp" 
+					"src/Objects/Ball.cpp" 
+					"src/Objects/Paddle.cpp")
 target_include_directories(main PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
 find_package(SFML COMPONENTS main graphics audio REQUIRED)
@@ -21,5 +20,5 @@ target_link_libraries(main PRIVATE sfml-main sfml-graphics sfml-audio)
 find_package(TGUI CONFIG REQUIRED)
 target_link_libraries(main PRIVATE tgui)
 
-message(STATUS ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
-configure_file(${CMAKE_SOURCE_DIR}/resources/bit9x9.ttf ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file(${CMAKE_SOURCE_DIR}/resources/pong.ttf ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file(${CMAKE_SOURCE_DIR}/resources/icon.png ${CMAKE_BINARY_DIR} COPYONLY)
