--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,11 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(main 
 					"src/Main.cpp"
-					"src/Game.cpp" 
-					"src/ServiceLocator.cpp"
-					"src/Scenes/SceneManager.cpp" 
-					"src/Scenes/MainMenuScene.cpp" 
-					"src/Scenes/PlayScene.cpp" 
-					"src/Objects/Ball.cpp" 
-					"src/Objects/Paddle.cpp" "include/Scenes/PlayScene.hpp")
+					"src/Game.cpp"
+					"src/States/MainMenuState.cpp"
+					"src/States/TwoPlayerState.cpp"
+					"src/Objects/Paddle.cpp"
+					"src/Objects/Ball.cpp")
 target_include_directories(main PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
 find_package(SFML COMPONENTS main graphics audio REQUIRED)
