--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project("Ping Pong")
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(main 
+add_executable(main WIN32
 					"src/Main.cpp"
 					"src/Game.cpp"
 					"src/Ball.cpp"
@@ -12,7 +12,9 @@ add_executable(main
 					"src/States/ChooseDifficultyState.cpp"
 					"src/States/TwoPlayerState.cpp"
 					"src/States/SpacebarToStartState.cpp" 
-					"src/States/OnePlayerState.cpp")
+					"src/States/OnePlayerState.cpp"
+					"src/States/GameOverState.cpp")
+
 target_include_directories(main PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
 find_package(SFML COMPONENTS main graphics audio REQUIRED)
