clean up CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,27 +3,24 @@ project("Ping Pong")
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(main WIN32
-					"src/Main.cpp"
-					"src/Game.cpp"
-					"src/Ball.cpp"
-					"src/SoundManager.cpp"
-					"src/States/MainMenuState.cpp"
-					"src/States/ChooseDifficultyState.cpp"
-					"src/States/TwoPlayerState.cpp"
-					"src/States/SpacebarToStartState.cpp" 
-					"src/States/OnePlayerState.cpp"
-					"src/States/GameOverState.cpp")
+add_executable(pingpong WIN32
+					${CMAKE_SOURCE_DIR}/src/Main.cpp
+					${CMAKE_SOURCE_DIR}/src/Game.cpp
+					${CMAKE_SOURCE_DIR}/src/Ball.cpp
+					${CMAKE_SOURCE_DIR}/src/SoundManager.cpp
+					${CMAKE_SOURCE_DIR}/src/States/MainMenuState.cpp
+					${CMAKE_SOURCE_DIR}/src/States/ChooseDifficultyState.cpp
+					${CMAKE_SOURCE_DIR}/src/States/TwoPlayerState.cpp
+					${CMAKE_SOURCE_DIR}/src/States/SpacebarToStartState.cpp
+					${CMAKE_SOURCE_DIR}/src/States/OnePlayerState.cpp
+					${CMAKE_SOURCE_DIR}/src/States/GameOverState.cpp)
 
-target_include_directories(main PRIVATE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(pingpong PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
 find_package(SFML COMPONENTS main graphics audio REQUIRED)
-target_link_libraries(main PRIVATE sfml-main sfml-graphics sfml-audio)
+target_link_libraries(pingpong PRIVATE sfml-main sfml-graphics sfml-audio)
 
 find_package(TGUI CONFIG REQUIRED)
-target_link_libraries(main PRIVATE tgui)
-
-find_package(effolkronium_random CONFIG REQUIRED)
-target_link_libraries(main PRIVATE effolkronium_random)
+target_link_libraries(pingpong PRIVATE tgui)
 
 file(COPY ${CMAKE_SOURCE_DIR}/assets DESTINATION ${CMAKE_BINARY_DIR})
