add openal32.dll to target directory for windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,13 @@ add_executable(pingpong WIN32
 if(WIN32)
     find_package(SFML COMPONENTS main graphics audio REQUIRED)
     target_link_libraries(pingpong PUBLIC sfml-main sfml-graphics sfml-audio)
-
+ 
     add_custom_command(TARGET pingpong POST_BUILD
                         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:pingpong> $<TARGET_FILE_DIR:pingpong>
+                        COMMAND_EXPAND_LISTS)
+
+    add_custom_command(TARGET pingpong POST_BUILD
+                        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:pingpong>/../openal32.dll $<TARGET_FILE_DIR:pingpong>
                         COMMAND_EXPAND_LISTS)
 elseif(UNIX)
     find_package(SFML COMPONENTS graphics audio REQUIRED)
