cleanup CMake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,22 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(pingpong VERSION 0.1.0)
 
-add_executable(pingpong WIN32
+add_executable(pingpong #WIN32
     src/Main.cpp
     src/Game.cpp
     src/GameObjects/Button.cpp
     src/GameObjects/Ball.cpp
     src/States/MainMenuState.cpp)
 
-if(WIN32)
-    find_package(SFML COMPONENTS main graphics audio REQUIRED)
-    target_link_libraries(pingpong PUBLIC sfml-main sfml-graphics sfml-audio)
- 
-    add_custom_command(TARGET pingpong POST_BUILD
-                        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:pingpong> $<TARGET_FILE_DIR:pingpong>
-                        COMMAND_EXPAND_LISTS)
+find_package(SFML COMPONENTS main graphics audio REQUIRED)
+target_link_libraries(pingpong PUBLIC sfml-main sfml-graphics sfml-audio)
 
+if(WIN32)
     add_custom_command(TARGET pingpong POST_BUILD
-                        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:pingpong>/../openal32.dll $<TARGET_FILE_DIR:pingpong>
+                        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:pingpong> 
+                        $<TARGET_RUNTIME_DLLS:pingpong>/../openal32.dll
+                        $<TARGET_FILE_DIR:pingpong>
                         COMMAND_EXPAND_LISTS)
-elseif(UNIX)
-    find_package(SFML COMPONENTS graphics audio REQUIRED)
-    target_link_libraries(pingpong PUBLIC sfml-graphics sfml-audio)
 endif()
 
 add_custom_command(TARGET pingpong POST_BUILD
