--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,15 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(pingpong VERSION 0.1.0)
 
-add_executable(pingpong #WIN32
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+add_executable(pingpong $<$<CONFIG:Release>:WIN32>
     src/Main.cpp
     src/Game.cpp
     src/GameObjects/Button.cpp
     src/GameObjects/Ball.cpp
+    src/GameObjects/Paddle.cpp
     src/States/MainMenuState.cpp)
 
 find_package(SFML COMPONENTS main graphics audio REQUIRED)
