--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 add_executable(pingpong $<$<CONFIG:Release>:WIN32>
     src/Main.cpp
     src/Game.cpp
+    src/SoundManager.cpp
     src/GameObjects/Button.cpp
     src/GameObjects/Ball.cpp
     src/GameObjects/Paddle.cpp
